# MasterThesis

./: .video_par.cpp.swp  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  TabularData.csv  cmake_install.cmake  vd_features.h~  vd_header.h~  vd_tracker.h~  video_face.cpp~  video_par.cpp~
Header/: Detection.h  Feature.h  Track.h  Util.h
Source/: Detection.cpp  Feature.cpp  MainDetector.cpp  Track.cpp  Util.cpp
